--- a/catalog-item.html
+++ b/catalog-item.html
@@ -23,47 +23,46 @@
     <main class="container">
       <h1 class="page-title">Набор для путешесвтий «Baxter of California»</h1>
 
-      <ul class="beardcrumbs">
+      <ul class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
-        <li><a href="shop.html">Магазин</a></li>
-        <li><a href="catalog.html">Средства для ухода</a></li>
-        <li class="beardcrumbs-current">Набор для путешесвтий «Baxter of California»</li>
+        <li><a href="#">Магазин</a></li>
+        <li><a href="#">Средства для ухода</a></li>
+        <li class="breadcrumbs-current">Набор для путешесвтий «Baxter of California»</li>
       </ul>
 
-      <section class="gallery">
-        <h2 class="visually-hidden">Галерея товара</h2>
-        <ul class="gallery-list">
-          <li><img src="img/baxter-travel-kit-1.jpg" alt="Набор для путешесвтий «Baxter of California»"></li>
-          <li><img src="img/baxter-travel-kit-2.jpg" alt="Набор для путешесвтий «Baxter of California»"></li>
-          <li><img src="img/baxter-travel-kit-3.jpg" alt="Набор для путешесвтий «Baxter of California»"></li>
-          <li><img src="img/baxter-travel-kit-4.jpg" alt="Набор для путешесвтий «Baxter of California»"></li>
+      <section class="product-photos">
+        <h2 class="visually-hidden">Изображения товара</h2>
+        <p class="product-photo-full">
+          <img src="img/baxter-travel-kit-1.jpg" alt="Фото всего набора">
+        </p>
+        <ul class="product-photo-preview">
+          <li><img src="img/baxter-travel-kit-2.jpg" alt="Фото в анфас"></li>
+          <li><img src="img/baxter-travel-kit-3.jpg" alt="Фото в профиль"></li>
+          <li><img src="img/baxter-travel-kit-4.jpg" alt="Фото отдельной части"></li>
         </ul>
       </section>
 
-      <section class="description">
+      <section class="product-info">
         <h2 class="visually-hidden">Описание товара</h2>
-        <div class="availability">
-          <p>Есть в наличии</p>
-        </div>
-        <div class="code">
-          <p>Артикул: Dexter-AE</p>
-        </div>
-        <p class="item-description">
+        <p class="product-availability">Есть в наличии</p>
+        <p class="product-article">Артикул: Dexter-AE</p>
+        <p class="product-text">
           Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей
           во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать
           отличным подарком.
         </p>
-        <ul class="consist">В набор входят:
+        <p class="product-price">
+          <b>2900 ₽</b>
+          <a class="button" href="#">Купить</a>
+        </p>
+        <h3>В набор входят:</h3>
+        <ul>
           <li>Средство для умывания (50 мл)</li>
           <li>Увлажняющий крем (50 мл)</li>
           <li>Крем для бритья (50 мл</li>
           <li>Крем после бритья, шампунь (50 мл)</li>
           <li>Удобная кожаная косметичка</li>
         </ul>
-        <p class="item-price">
-          <b>2900 ₽</b>
-          <a class="button" href="#">Купить</a>
-        </p>
       </section>
     </main>
     <footer class="main-footer">
