--- a/catalog-item.html
+++ b/catalog-item.html
@@ -33,12 +33,12 @@
       <section class="product-photos">
         <h2 class="visually-hidden">Изображения товара</h2>
         <p class="product-photo-full">
-          <img src="img/baxter-travel-kit-1.jpg" alt="Фото всего набора">
+          <img src="img/baxter-travel-kit-big.png" width="460" height="498" alt="Фото всего набора">
         </p>
         <ul class="product-photo-preview">
-          <li><img src="img/baxter-travel-kit-2.jpg" alt="Фото в анфас"></li>
-          <li><img src="img/baxter-travel-kit-3.jpg" alt="Фото в профиль"></li>
-          <li><img src="img/baxter-travel-kit-4.jpg" alt="Фото отдельной части"></li>
+          <li><img src="img/baxter-travel-kit-1.png" width="140" height="149" alt="Фото в анфас"></li>
+          <li><img src="img/baxter-travel-kit-2.png" width="140" height="149" alt="Фото в профиль"></li>
+          <li><img src="img/baxter-travel-kit-small.png" width="140" height="149" alt="Фото отдельной части"></li>
         </ul>
       </section>
 
