--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html"><img src="inner-logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
+        <a class="main-header-logo" href="index.html"><img src="img/inner-logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
           <li><a href="news.html">Новости</a></li>
@@ -46,7 +46,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/baxter-travel-kit.jpg" alt="Набор для путешествий «Baxter of California»">
+                <img src="img/baxter-travel-kit.png" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -63,7 +63,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/baxter-conditioner.jpg" alt="Увлажняющий кондиционер «Baxter of California»">
+                <img src="img/baxter-conditioner.png" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -80,7 +80,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/suavecito-gel.jpg" alt="Гель для волос «Suavecito»">
+                <img src="img/suavecito-gel.png" width="220" height="165" alt="Гель для волос «Suavecito»">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -97,7 +97,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/american-crew-clay.jpg" alt="Глина для укладки волос «American crew»">
+                <img src="img/american-crew-clay.png" width="220" height="165" alt="Глина для укладки волос «American crew»">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -114,7 +114,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/american-crew-gel.jpg" alt="Гель для волос «American crew»">
+                <img src="img/american-crew-gel.png" width="220" height="165" alt="Гель для волос «American crew»">
               </a>
             </p>
             <p class="catalog-item-price">
@@ -131,7 +131,7 @@
             </h3>
             <p class="catalog-item-image">
               <a href="catalog-item.html">
-                <img src="img/baxter-kit.jpg" alt="Набор для бритья «Baxter of California»">
+                <img src="img/baxter-kit.png" width="220" height="165" alt="Набор для бритья «Baxter of California»">
               </a>
             </p>
             <p class="catalog-item-price">
