--- a/price.html
+++ b/price.html
@@ -7,7 +7,7 @@
 <body>
 	<header class="main-header">
 		<nav class="main-navigation">
-			<a class="main-header-logo" href="index.html"><img src="inner-logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
+			<a class="main-header-logo" href="index.html"><img src="img/inner-logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
