--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo"><img src="index-logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
+        <a class="main-header-logo"><img src="img/index-logo.svg" width="371" height="155" alt="Логотип барбершопа «Бородинский»"></a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
           <li><a href="news.html">Новости</a></li>
@@ -59,7 +59,7 @@
       <section class="gallery">
         <h2>Фотогалерея</h2>
         <figure class="gallery-content">
-          <a href="#"><img src="studio.jpg" alt="Интерьер барбершопа «Бородинский»"></a>
+          <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер барбершопа «Бородинский»"></a>
         </figure>
         <span class="button gallery-button gallery-button-back">Назад</span>
         <span class="button gallery-button gallery-button-next">Вперед</span>
