Добаляет формы в разметку

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -16,7 +16,7 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li>Вход</li>
+          <li><a class="login-link">Вход</a></li>
         </ul>
       </nav>
     </header>
