--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
         <ul class="user-navigation">
-          <li>Вход</li>
+          <li><a class="login-link" href="login.html">Вход</a></li>
         </ul>
       </nav>
     </header>
@@ -61,8 +61,8 @@
         <figure class="gallery-content">
           <a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер барбершопа «Бородинский»"></a>
         </figure>
-        <span class="button gallery-button gallery-button-back">Назад</span>
-        <span class="button gallery-button gallery-button-next">Вперед</span>
+        <button class="button gallery-button gallery-button-back" type="button">Назад</button>
+        <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
       </section>
 
       <section class="contacts">
@@ -84,7 +84,33 @@
       <section class="appointment">
         <h2>Записаться</h2>
         <p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
-        <!--Здесь будет форма-->
+        <form class="appointment-form" method="POST" action="#">
+					<p class="appointment-form-item">
+						<label>
+							Дата
+							<input type="text" name="date" value="" placeholder="08.10.2017">
+						</label>
+					</p>
+					<p class="appointment-form-item">
+						<label>
+							Время
+							<input type="text" name="time" value="" placeholder="10:00">
+						</label>
+					</p>
+					<p class="appointment-form-item">
+						<label>
+							Ваше имя
+							<input type="text" name="name" value="" placeholder="Борода">
+						</label>
+					</p>
+					<p class="appointment-form-item">
+						<label>
+							Телефон
+							<input type="tel" name="phone" value="" placeholder="+7 123-456-78-90">
+						</label>
+					</p>
+					<button class="button" type="submit">Отправить</button>
+        </form>
       </section>
     </main>
     <footer class="main-footer">
@@ -113,13 +139,30 @@
     <section class="modal modal-login">
       <h2>Личный кабинет</h2>
       <p>Введите пожалуйста свой логин и пароль</p>
-      <!--Здесь будет форма-->
-      <span class="modal-close">x</span>
+				<form class="login-form" method="POST" action="#">
+					<p>
+						<label class="visually-hidden" for="user-name">Логин</label>
+						<input class="login-icon-user" id="user-name" type="text" name="name" value="" placeholder="Логин">
+					</p>
+					<p>
+						<label class="visually-hidden" for="user-password">Пароль</label>
+						<input class="login-icon-password" id="user-password" type="text" name="password" value="" placeholder="Пароль">
+					</p>
+					<p class="login-password-info">
+						<label class="login-checkbox">
+							<input type="checkbox" name="remember">Запомните меня
+						</label>
+						<a class="restore" href="#">Я забыл пароль</a>
+					</p>
+					<button class="button" type="submit">Войти</button>
+				</form>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
 
     <section class="modal modal-map">
-      <h2 class="visually-hidden">Как до нас добраться</h2>
-      <span class="modal-close">x</span>
+			<h2 class="visually-hidden">Как до нас добраться</h2>
+				<img src="map.png" width="780" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
 </html>
