Выполнена базовая стилизация всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  <body class="inner-page">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="index.html"><img src="img/inner-logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>
@@ -35,7 +38,7 @@
 					<fieldset>
 						<legend>Производители:</legend>
 						<ul>
-							<li class="filter-option">					
+							<li class="filter-option">
 								<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
 								<label for="filter-baxter-of-california">Baxter of California</label>
 							</li>
