--- a/catalog-item.html
+++ b/catalog-item.html
@@ -10,7 +10,7 @@
   <body class="inner-page">
 	  <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html"><img src="inner-logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
+        <a class="main-header-logo" href="index.html"><img src="img/inner-logo.svg" alt="Логотип барбершопа «Бородинский»"></a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
           <li><a href="news.html">Новости</a></li>
@@ -33,22 +33,25 @@
         <li class="breadcrumbs-current">Набор для путешесвтий «Baxter of California»</li>
       </ul>
 
-      <section class="product-photos">
-        <h2 class="visually-hidden">Изображения товара</h2>
-        <p class="product-photo-full">
-          <img src="img/baxter-travel-kit-big.png" width="460" height="498" alt="Фото всего набора">
-        </p>
-        <ul class="product-photo-preview">
-          <li><img src="img/baxter-travel-kit-1.png" width="140" height="149" alt="Фото в анфас"></li>
-          <li><img src="img/baxter-travel-kit-2.png" width="140" height="149" alt="Фото в профиль"></li>
-          <li><img src="img/baxter-travel-kit-small.png" width="140" height="149" alt="Фото отдельной части"></li>
-        </ul>
-      </section>
+      <div class="catalog-columns">
+        <section class="product-photos">
+          <h2 class="visually-hidden">Изображения товара</h2>
+          <p class="product-photo-full">
+            <img src="img/baxter-travel-kit-big.png" width="460" height="498" alt="Фото всего набора">
+          </p>
+          <ul class="product-photo-preview">
+            <li><img src="img/baxter-travel-kit-1.png" width="140" height="149" alt="Фото в анфас"></li>
+            <li><img src="img/baxter-travel-kit-2.png" width="140" height="149" alt="Фото в профиль"></li>
+            <li><img src="img/baxter-travel-kit-small.png" width="140" height="149" alt="Фото отдельной части"></li>
+          </ul>
+        </section>
 
       <section class="product-info">
         <h2 class="visually-hidden">Описание товара</h2>
-        <p class="product-availability">Есть в наличии</p>
-        <p class="product-article">Артикул: Dexter-AE</p>
+        <div class="product-description">
+          <p class="product-availability">Есть в наличии</p>
+          <p class="product-article">Артикул: Dexter-AE</p>
+        </div>
         <p class="product-text">
           Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей
           во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать
@@ -67,6 +70,7 @@
           <li>Удобная кожаная косметичка</li>
         </ul>
       </section>
+    </div>
     </main>
     <footer class="main-footer">
       <p class="footer-contacts">
